# next16-foundations

./: .env.example  .gitignore  AGENT_SETUP.md  GEMINI.md  NEXT16_MIGRATION_GUIDE.md  README.md  biome.json  bts.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.tasks/implementation-que-docs/: ag-ui-is-redefining-the-agent-user-interaction-layer.txt  how-to-make-agents-talk-to-each-other-and-your-app-using-a2a-ag-ui.txt
agents/: .env.example  README.md  component_builder_agent.py  orchestrator.py  pyproject.toml
agents/utils/: a2a_setup.py  ag_ui_setup.py
apps/docs/.astro/: content-assets.mjs  content-modules.mjs  data-store.json  settings.json
apps/docs/.astro/collections/: docs.schema.json
apps/web/: next.config.ts  package.json  postcss.config.mjs
apps/web/public/favicon/: site.webmanifest
apps/web/src-tauri/: tauri.conf.json
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx
apps/web/src/app/actions/: cache.ts  supabase.ts
apps/web/src/app/api/agents/stats/: route.ts
apps/web/src/app/api/trpc/[trpc]/: route.ts
apps/web/src/components/: agent-orchestrator-status.tsx  cached-copilot-actions.tsx  copilot-chat.module.css  copilot-chat.tsx  supabase-realtime-templates.tsx
apps/web/src/lib/: supabase.ts
apps/web/src/types/: supabase.ts
apps/web/src/utils/: trpc.ts
rules/common/: code-quality-stack.md  code-quality.md
rules/vibe-code/: create-prd-stack.md  generate-tasks-stack.md  process-tasks-stack.md
